# libhidx

./: meson.build
libhidx/: meson.build
libhidx_server/: meson.build
libhidx_server/src/: meson.build
libhidx_server_daemon/: meson.build
subprojects/: asio.wrap
